force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/cgcloud__Filtered_Tactic_Selection_Filter__mdt.object-meta.xml
<CustomObject>
    <description>These are the filters that is configurable at the Filtered Tactic Selection lightning component</description>
    <label>Filtered Tactic Selection Filter</label>
    <pluralLabel>Filtered Tactic Selection Filters</pluralLabel>
</CustomObject>