force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is a toggle to activate or deactivate a Filter. Set this to false so that the system will ignore this configuration.</description>
    <inlineHelpText>Instead of deleting a filter, Uncheck to deactivate the filter. Alternatively, if you don&apos;t want user to be able to turn off this filter, set Display Filter to False(Unchecked) but set Active to True(Checked).</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>