force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Display_Filter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Filter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines whether the filter should be displayed in the Filtered Tactic Selection lightning component.</description>
    <inlineHelpText>Uncheck this filter if you don&apos;t want it to show at the Filtered Tactic Selection lightning component. If you do not want to give user the ability to turn off this filter, set Display Filter to False (Unchecked) but set Active to True (Checked).</inlineHelpText>
    <label>Display Filter In UI</label>
    <type>Checkbox</type>
</CustomField>