force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Display_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Label__c</fullName>
    <description>This is the label that will be displayed at the Filtered Tactic Selection lightning component.</description>
    <label>Display Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>