force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <description>This is the Filter&apos;s display order in the Filtered Tactic Selection component. If two filter contains the same Display Order, then it will be sorted Alphabetically.</description>
    <inlineHelpText>Choose a display order for the filter to appear.</inlineHelpText>
    <label>Display Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>