force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Is_PickList_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_PickList_Value__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is a toggle to allow user to enter Picklist Values instead of using a dynamic SOQL Query to populate the option values of a Multi-Select Picklist. This field is only applicable if the UI Type is a &apos;Multi-Select Picklist&apos; type.</description>
    <inlineHelpText>Check this if Sub Query Source is NOT a SOQL Query.

      If this value is checked, enter picklist values separated by the &apos;Enter&apos; or &apos;Return&apos; key if the Sub Query Source textbox.</inlineHelpText>
    <label>Manual PickList Value Entry</label>
    <type>Checkbox</type>
</CustomField>