force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Query_Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Query_Condition__c</fullName>
    <description>This is the contents of the query condition associated with the filter.</description>
    <inlineHelpText>This is the condition expression after the WHERE clause of the SOQL query. All Filter&apos;s Query Condition will be appended an &apos;AND&apos; qualifier if there&apos;s more than one filter, and a bracket ().</inlineHelpText>
    <label>Query Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>