force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <description>Specifies whether the filter applies to a specific Sales Org. By default, it applies to ALL Sales Organization unless a specific Sales Org value is chosen in this field.</description>
    <inlineHelpText>By default, it applies to ALL Sales Organization. Otherwise, choose a Specific Sales Org if you want this filter to only apply to that Sales Org</inlineHelpText>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>0003</fullName>
            </value>
            <value>
                <fullName>0004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>