force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__UI_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Type__c</fullName>
    <description>The type of UI to be rendered. Currently, it only supports the Checkbox type.</description>
    <label>UI Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
                <default>true</default>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>