force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/fields/cgcloud__Use_Single_Quotation_on_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Single_Quotation_on_Parameters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only applicable in parameterized query. Wrap parameters in single quotation if checked.</description>
    <inlineHelpText>If checked, returns parameter result as: &apos;A&apos;,&apos;B&apos;,&apos;C&apos;
      If unchecked, it is returned as: A,B,C</inlineHelpText>
    <label>Use Single Quotation on Parameters</label>
    <type>Checkbox</type>
</CustomField>