force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/validationRules/cgcloud__Query_Condition_must_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Query_Condition_must_not_be_empty</fullName>
    <active>true</active>
    <description>The Query Condition can&apos;t be empty.</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISBLANK( cgcloud__Query_Condition__c )
      )</errorConditionFormula>
    <errorMessage>The Query Condition can&apos;t be empty.</errorMessage>
</ValidationRule>