force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/validationRules/cgcloud__Sub_Query_No_Input_Symbol_OR_LIMIT.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sub_Query_No_Input_Symbol_OR_LIMIT</fullName>
    <active>true</active>
    <description>Sub Query Source can&apos;t contain the keyword &apos;limit&apos; or {0} (input symbol).</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      FIND(&apos;{0}&apos;, cgcloud__Sub_Query_Source__c ) &gt; 0 ||
      CONTAINS(UPPER(cgcloud__Sub_Query_Source__c),&apos;LIMIT&apos;)
      )</errorConditionFormula>
    <errorMessage>Sub Query Source can&apos;t contain the keyword &apos;limit&apos; or {0} (input symbol).</errorMessage>
</ValidationRule>