force-app/main/default/objects/cgcloud__Filtered_Tactic_Selection_Filter__mdt/validationRules/cgcloud__SubQuery_must_not_be_empty_for_picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__SubQuery_must_not_be_empty_for_picklist</fullName>
    <active>true</active>
    <description>Ensures that if user chose an UI Type of Multi-Select Picklist,, Subquery Source cannot be empty.</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISPICKVAL( cgcloud__UI_Type__c , &apos;Multi-Select Picklist&apos;),
      ISBLANK( cgcloud__Sub_Query_Source__c )
      )</errorConditionFormula>
    <errorMessage>Multi Select Picklist needs a valid subquery source to populate its data.</errorMessage>
</ValidationRule>